[gd_scene load_steps=3 format=3 uid="uid://cqnxqud6yuc5q"]

[ext_resource type="Script" path="res://components/vision_cone/vision_cone.gd" id="1_nivfg"]
[ext_resource type="Texture2D" uid="uid://dta4ap7p2ag13" path="res://textures/lights/explorer_light.png" id="2_cep4v"]

[node name="VisionCone" type="Area2D" node_paths=PackedStringArray("raycast")]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_nivfg")
raycast = NodePath("RayCast2D")
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 160, -48, 176, -32, 192, 0, 176, 32, 160, 48)

[node name="PointLight2D" type="PointLight2D" parent="CollisionPolygon2D"]
blend_mode = 2
texture = ExtResource("2_cep4v")

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(192, 0)
collision_mask = 3

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
